Add scss, Angular material and view to add new shoes

--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,15 +1,8 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-12">
       <app-navbar></app-navbar>
     </div>
   </div>
-  <div class="row">
-    <div class="col-lg-3">
-      <app-filters></app-filters>
-    </div>
-    <div class="col-lg-9">
-      <app-shoes-list></app-shoes-list>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
