--- a/src/main/frontend/src/app/filters/filters.component.html
+++ b/src/main/frontend/src/app/filters/filters.component.html
@@ -1,47 +1,45 @@
-<div class="panel panel-default">
-  <div class="panel-heading">Filtry</div>
-  <div class="panel-body">
-    <label>Cena</label>
-    <div class="form-group">
-      <input type="text" class="form-control form-size" placeholder="Od">
-      <input type="text" class="form-control form-size" placeholder="Do">
-    </div>
-    <label>Rozmiar obuwia</label>
-    <div class="shoe-size-container">
-      <div class="row">
-        <button class="btn btn-default">37</button>
-        <button class="btn btn-default">38</button>
-        <button class="btn btn-default">39</button>
-        <button class="btn btn-default">40</button>
+<mat-card>
+  <mat-card-title>Filtry</mat-card-title>
+  <mat-card-content>
+    <form class="filter-form">
+      <h4>Cena</h4>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Od">
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Do">
+      </mat-form-field>
+      <h4>Rozmiar obuwia</h4>
+      <div class="button-row">
+        <button mat-button class="size-btn">37</button>
+        <button mat-button class="size-btn">38</button>
+        <button mat-button class="size-btn">39</button>
+        <button mat-button class="size-btn">40</button>
       </div>
-      <div class="row">
-        <button class="btn btn-default">41</button>
-        <button class="btn btn-default">42</button>
-        <button class="btn btn-default">43</button>
-        <button class="btn btn-default">44</button>
+      <div class="button-row mt-1">
+        <button mat-button class="size-btn">41</button>
+        <button mat-button class="size-btn">42</button>
+        <button mat-button class="size-btn">43</button>
+        <button mat-button class="size-btn">44</button>
       </div>
-      <div class="row">
-        <button class="btn btn-default">45</button>
-        <button class="btn btn-default">46</button>
-        <button class="btn btn-default">47</button>
-        <button class="btn btn-default">48</button>
+      <div class="button-row mt-1">
+        <button mat-button class="size-btn">45</button>
+        <button mat-button class="size-btn">46</button>
+        <button mat-button class="size-btn">47</button>
+        <button mat-button class="size-btn">48</button>
       </div>
-    </div>
-    <div class="form-group">
-      <label>Marka</label>
-      <!-- <input type="text" class="form-control"> -->
-      <ng-selectize [config]="selectizeConfig" [options]="markOptions" [(ngModel)]="mark"></ng-selectize>
-    </div>
-    <div class="form-group">
-      <label>Nazwa</label>
-      <input type="text" class="form-control">
-    </div>
-    <div class="form-group">
-      <label>Kolor</label>
-      <input type="text" class="form-control">
-    </div>
-    <div class="text-right">
-      <button class="btn btn-warning">Filtruj</button>
-    </div>
-  </div>
-</div>
+      <h4 class="mt-3">Marka</h4>
+      <mat-form-field class="example-full-width">
+        <input matInput>
+      </mat-form-field>
+      <h4>Nazwa</h4>
+      <mat-form-field class="example-full-width">
+        <input matInput>
+      </mat-form-field>
+      <h4>Kolor</h4>
+      <mat-form-field class="example-full-width">
+        <input matInput>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+</mat-card>
