--- a/src/main/frontend/src/app/navbar/navbar.component.html
+++ b/src/main/frontend/src/app/navbar/navbar.component.html
@@ -1,29 +1,22 @@
-<nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <a href="" class="navbar-brand">ShoeShop</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#">Męskie</a>
-        </li>
-        <li>
-          <a href="#">Damskie</a>
-        </li>
-        <li>
-          <a href="#">Dziecięce</a>
-        </li>
-        <li>
-          <a href="#">Sportowe</a>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Szukaj">
-        </div>
-        <button class="btn btn-default">Szukaj</button>
-      </form>
-    </div>
-  </div>
-</nav>
+<mat-toolbar>
+  <a [routerLink]="['']" class="navbar-brand">ShoeShop</a>
+  <ul class="navbar-menu">
+    <li>
+      <a href="#">Męskie</a>
+    </li>
+    <li>
+      <a href="#">Damskie</a>
+    </li>
+    <li>
+      <a href="#">Dziecięce</a>
+    </li>
+    <li>
+      <a href="#">Sportowe</a>
+    </li>
+  </ul>
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
+    <button class="btn btn-outline-success my-2 my-sm-0 mx-1" [routerLink]="['add']">Dodaj</button>
+  </form>
+</mat-toolbar>
