Connect shoes list with endpoint

--- a/src/main/frontend/src/app/shoes-list/shoes/shoes.component.html
+++ b/src/main/frontend/src/app/shoes-list/shoes/shoes.component.html
@@ -2,12 +2,12 @@
   <img mat-card-image class="shoes-image" src="{{ data.imagePath }}" alt="{{ data.name }}">
   <mat-card-header>
     <mat-card-title>
-      <h2>{{ data.mark }}</h2>
+      <h2>{{ data.brand }}</h2>
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <h4>
-      {{ data.name }}
+      {{ data.model }}
       <span class="badge badge-primary badge-price">{{ data.price }} zł</span>
     </h4>
   </mat-card-content>
