--- a/src/main/frontend/src/app/shoes-list/shoes/shoes.component.scss
+++ b/src/main/frontend/src/app/shoes-list/shoes/shoes.component.scss
@@ -6,6 +6,7 @@
     padding: 0 10px;
   }
   .badge-price {
+    background-color: #33a94e;
     position: absolute;
     bottom: 15px;
     right: 15px;
