--- a/src/main/frontend/src/app/navbar/navbar.component.html
+++ b/src/main/frontend/src/app/navbar/navbar.component.html
@@ -14,9 +14,10 @@
       <a href="#">Sportowe</a>
     </li>
   </ul>
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
-    <button class="btn btn-outline-success my-2 my-sm-0 mx-1" [routerLink]="['add']">Dodaj</button>
+  <form class="form-inline my-2 my-lg-0" #searchForm="ngForm" (ngSubmit)="searchByPhrase()">
+    <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Search" name="searchInput" [(ngModel)]="searchText"
+      #searchInput="ngModel">
+    <button mat-raised-button class="my-2 my-sm-0" type="submit">Szukaj</button>
   </form>
+  <button mat-raised-button class="my-2 my-sm-0 mx-1" [routerLink]="['add']">Dodaj</button>
 </mat-toolbar>
