--- a/src/main/frontend/src/app/shoes-list/shoes-list.component.html
+++ b/src/main/frontend/src/app/shoes-list/shoes-list.component.html
@@ -6,7 +6,7 @@
     <mat-card>
       <mat-card-title>Buty męskie</mat-card-title>
       <mat-card-content>
-        <app-shoes *ngFor="let shoe of shoesService.shoes" [data]="shoe"></app-shoes>
+        <app-shoes *ngFor="let shoe of shoesService.shoes" [data]="shoe" [routerLink]="['shoes', shoe.id, 'variant', shoe.variantId]"></app-shoes>
       </mat-card-content>
     </mat-card>
   </div>
