--- a/src/main/frontend/src/styles.scss
+++ b/src/main/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/theming';
+@import "~font-awesome/css/font-awesome.css";
 @import url('//fonts.googleapis.com/icon?family=Material+Icons');
 
 @include mat-core();
