--- a/src/main/frontend/src/app/add-shoes/add-variant/add-variant.component.html
+++ b/src/main/frontend/src/app/add-shoes/add-variant/add-variant.component.html
@@ -13,11 +13,14 @@
       <div class="col-12">
         <label>Kolor obuwia</label>
         <mat-form-field class="input-width">
-          <mat-select required [(ngModel)]="variants.shankColor" name="shankColor" #shankColor="ngModel">
+          <mat-select [(ngModel)]="variants.shankColor" [formControl]="variantsForm.shankColor" [errorStateMatcher]="matcher">
             <mat-option *ngFor="let color of colors" [value]="color.value">
               {{ color.viewValue }}
             </mat-option>
           </mat-select>
+          <mat-error *ngIf="variantsForm.shankColor.hasError('required')">
+            To pole jest wymagane
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
@@ -25,11 +28,14 @@
       <div class="col-12">
         <label>Kolor podeszwy</label>
         <mat-form-field class="input-width">
-          <mat-select required [(ngModel)]="variants.soleColor" name="soleColor" #soleColor="ngModel">
+          <mat-select [(ngModel)]="variants.soleColor" [formControl]="variantsForm.soleColor" [errorStateMatcher]="matcher">
             <mat-option *ngFor="let color of colors" [value]="color.value">
               {{ color.viewValue }}
             </mat-option>
           </mat-select>
+          <mat-error *ngIf="variantsForm.soleColor.hasError('required')">
+            To pole jest wymagane
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
@@ -37,7 +43,7 @@
       <mat-card-content>
         <div class="row">
           <div class="col-5">Rozmiar</div>
-          <div class="col-5">Ilość sztuk</div>
+          <div class="col-5">Liczba sztuk</div>
           <div class="col-2"></div>
         </div>
         <div class="row" *ngFor="let variant of variants.sizedShoes; let i = index">
@@ -52,8 +58,12 @@
             </mat-form-field>
           </div>
           <div class="col-2">
-            <button *ngIf="i !== variants.sizedShoes.length - 1" mat-raised-button class="remove-variant-btn" (click)="removeVariant(i)">-</button>
-            <button *ngIf="i === variants.sizedShoes.length - 1" mat-raised-button class="add-variant-btn" (click)="addVariant()">+</button>
+            <button [disabled]="variants.sizedShoes.length === 1" mat-raised-button class="remove-variant-btn" (click)="removeVariant(i)">&times;</button>
+          </div>
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-5 text-right">
+            <button type="button" mat-raised-button class="add-variant-btn" (click)="addVariant()">Dodaj kolejny rozmiar</button>
           </div>
         </div>
       </mat-card-content>
