--- a/src/main/frontend/src/app/add-shoes/add-variant/add-variant.component.scss
+++ b/src/main/frontend/src/app/add-shoes/add-variant/add-variant.component.scss
@@ -12,12 +12,17 @@
     font-weight: bold;
     &.add-variant-btn {
       min-width: 60px;
-      background-color: cornflowerblue;
+      background-color: #33a94e;
+      color: white;
     }
     &.remove-variant-btn {
       min-width: 60px;
       color: white;
+      font-size: 25px;
       background-color: firebrick;
+      &:disabled {
+        cursor: not-allowed;
+      }
     }
   }
 }
