--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="spinner" *ngIf="global.loader">
+  <mat-progress-spinner [diameter]="150" [color]="'primary'" [mode]="'indeterminate'" [value]="50"></mat-progress-spinner>
+</div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
