--- a/src/main/frontend/src/app/shoes-detail/shoes-detail.component.scss
+++ b/src/main/frontend/src/app/shoes-detail/shoes-detail.component.scss
@@ -2,6 +2,9 @@
   .shoes-information {
     width: 350px;
     vertical-align: top;
+    h2 {
+      text-align: center;
+    }
     display: inline-block;
     .color-variants {
       width: 50px;
@@ -9,6 +12,7 @@
       display: inline-block;
       box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
       border-radius: 50%;
+      cursor: pointer;
     }
     .add-to-cart {
       width: 100%;
@@ -17,14 +21,28 @@
       font-weight: bold;
       font-size: 20px;
     }
+    .sizes-button {
+      .selected-size {
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        font-weight: bold;
+      }
+    }
   }
   .mat-list {
     width: 80%;
     margin: 20px auto 0;
-    .mat-list-item h4 {
-        width: 50%;
+    .mat-list-item {
+      height: auto;
+      h4 {
+        width: 35%;
         font-size: inherit;
         font-weight: 600;
+      }
+      p {
+        width: 65%;
+        margin: 0.5rem 0;
+      }
     }
     .mat-divider {
       position: relative;
