--- a/src/main/frontend/src/app/add-shoes/add-variant/add-variant.component.html
+++ b/src/main/frontend/src/app/add-shoes/add-variant/add-variant.component.html
@@ -4,9 +4,7 @@
     <div class="row mt-3">
       <div class="col-12">
         <label>Zdjęcie obuwia</label>
-        <mat-form-field class="input-width">
-          <input matInput>
-        </mat-form-field>
+        <input type="file" (change)="selectImage($event)">
       </div>
     </div>
     <div class="row">
@@ -70,7 +68,7 @@
     </mat-card>
     <div class="row mt-3 text-right">
       <div class="col-12">
-        <button mat-raised-button color="primary" type="submit" [disabled]="!addVariantForm.valid">Zapisz</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!addVariantForm.valid || !selectedImage">Zapisz</button>
       </div>
     </div>
   </form>
