--- a/src/main/frontend/src/app/shoes-list/shoes/shoes.component.scss
+++ b/src/main/frontend/src/app/shoes-list/shoes/shoes.component.scss
@@ -6,10 +6,13 @@
   .shoes-image {
     padding: 0 10px;
   }
-  .badge-price {
-    background-color: #33a94e;
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
+  h4 {
+    margin-bottom: 15px;
+    .badge-price {
+      background-color: #33a94e;
+      position: absolute;
+      bottom: 10px;
+      right: 15px;
+    }
   }
 }
